<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_now_playing_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="?colorTitle"
            android:textStyle="bold"
            android:text="@string/now_playing_theme" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/now_playing_screen_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="?colorAccent"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_submit_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>